# Linkedin_jobs_apply

./: README.md  pyproject.toml
Myvin/: README.md
Myvin/demo_site/: app.py  submissions.jsonl
Myvin/sample_data/: demo_jobs.yaml  demo_site.yaml
Myvin/src/job_apply_bot/: cli.py  config.py  models.py
Myvin/src/job_apply_bot/adapters/: __init__.py  generic.py
Myvin/tests/: test_generic_adapter.py  test_linkedin_adapter.py
demo_site/: __init__.py
sample_data/: applicant_profile.yaml  demo_job.yaml  resume.txt
src/job_apply_bot/: __init__.py  runner.py
src/job_apply_bot/adapters/: base.py  linkedin.py
tests/: test_cli_resume.py  test_config.py  test_demo_site.py
