[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "job-apply-bot"
version = "0.1.0"
description = "Configurable Python framework for auto-filling and optionally submitting job applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "playwright>=1.53.0,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "typer>=0.12.3,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
job-apply-bot = "job_apply_bot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/job_apply_bot"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
